[package]
name = "riscvregs"
version = "0.5.0"
repository = "https://github.com/rust-embedded/riscv"
authors = ["The RISC-V Team <risc-v@teams.rust-embedded.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "Low level access to RISC-V processors"
keywords = ["riscv", "register", "peripheral"]
license = "ISC"

[lib]
name = "riscvregs"
crate-type = ["rlib"]

[dependencies]
bare-metal = "0.2.0"
bit_field = "0.9.0"

[features]
inline-asm = []
